Using more people-friendly names rather than linux commands for.

--- a/templates/ram-chart.html
+++ b/templates/ram-chart.html
@@ -1,8 +1,8 @@
 <line-chart-plugin
     ng-if="maxRam"
     
-    heading="Memory Usage"
-    module-name="mem"
+    heading="RAM Usage"
+    module-name="current_ram"
 
     max-value="maxRam"
     min-value="minRam"
