--- a/templates/sections/system-stats.html
+++ b/templates/sections/system-stats.html
@@ -1,4 +1,6 @@
-<memory></memory>
-<cpu-load></cpu-load>
+
+<ram-chart></ram-chart>
+<cpu-load-chart></cpu-load-chart>
 <disk-space></disk-space>
-<processes></processes>
+<ram-intensive-processes></ram-intensive-processes>
+<cpu-intensive-processes></cpu-intensive-processes>
