--- a/css/main.css
+++ b/css/main.css
@@ -224,11 +224,11 @@ table th
 {
     font-weight: 600;
     text-transform: uppercase;
-    border-bottom: 1px solid #6678b1;
+    border-bottom: 1px solid #f1f1f1;
 }
 table td
 {
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid #f1f1f1;
     padding: 9px 8px;
 }
 table tbody tr:hover td
