file structure changed. also edited more module names to be human readable rather than Linux commands. What was I thinking?

--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,9 @@ body {
 ::-webkit-scrollbar-thumb:hover {
     background:#7d7d7d;
 }           
-
+.centered {
+    margin: 0 auto;
+}
 .hero {
     padding: 10px 0 20px 0;
     text-align: center;
