--- a/templates/modules/cpu-intensive-processes.html
+++ b/templates/modules/cpu-intensive-processes.html
@@ -1,5 +1,5 @@
 <table-data-plugin 
     heading="CPU Intensive Processes" 
     module-name="cpu_intensive_processes"
-    table-headers="tableConfig">
+    table-headers="['PID','USER','COMMAND','%CPU','RSS','VSZ']">
 </table-data-plugin>
