--- a/templates/modules/server-accounts.html
+++ b/templates/modules/server-accounts.html
@@ -1,5 +1,5 @@
 <table-data-plugin 
     heading="Accounts" 
     module-name="users"
-    table-headers="usersTableConfig">
+    table-headers="['Account Type','User','Home Directory']">
 </table-data-plugin>
