--- a/templates/app/navbar.html
+++ b/templates/app/navbar.html
@@ -2,7 +2,7 @@
 <ul ng-repeat="navItem in items">
     <li ng-class="{active: isActive(navItem) }">
         <a href="#/{{navItem}}">
-            {{getSidebarItemName(navItem)}}
+            {{getNavItemName(navItem)}}
         </a>
     </li>
 </ul>
