--- a/templates/modules/ip-addresses.html
+++ b/templates/modules/ip-addresses.html
@@ -1,5 +1,5 @@
 <table-data-plugin 
     heading="IP Addresses" 
     module-name="ip"
-    table-headers="ipTableConfig">
+    table-headers="['Name','IP']">
 </table-data-plugin>
