--- a/templates/modules/ram-intensive-processes.html
+++ b/templates/modules/ram-intensive-processes.html
@@ -1,5 +1,5 @@
 <table-data-plugin 
     heading="RAM Intensive Processes" 
     module-name="ram_intensive_processes"
-    table-headers="tableConfig">
+    table-headers="['PID','USER','COMMAND','%MEM','RSS','VSZ']">
 </table-data-plugin>
