--- a/templates/sections/accounts/index.html
+++ b/templates/sections/accounts/index.html
@@ -1,3 +1,3 @@
-<machine-accounts></machine-accounts>
+<server-accounts></server-accounts>
 <logged-in-accounts></logged-in-accounts>
 <recent-logins></recent-logins>
