--- a/templates/sections/network.html
+++ b/templates/sections/network.html
@@ -1,3 +1,6 @@
 <ip-addresses></ip-addresses>
 <network-connections></network-connections>
 <arp-cache-table></arp-cache-table>
+<ping-speeds></ping-speeds>
+<dhcp-leases></dhcp-leases>
+<bandwidth></bandwidth>
