--- a/templates/sections/system-stats.html
+++ b/templates/sections/system-stats.html
@@ -4,3 +4,4 @@
 <disk-space></disk-space>
 <ram-intensive-processes></ram-intensive-processes>
 <cpu-intensive-processes></cpu-intensive-processes>
+<swap-usage></swap-usage>
