Added new plugin type to display object-based data in table. redis module is now using it

--- a/templates/modules/redis.html
+++ b/templates/modules/redis.html
@@ -1,6 +1,4 @@
-<table-data-plugin 
-    heading="Redis" 
+<object-table-plugin 
+    heading="Redis"
     module-name="redis_status"
-    table-headers="['Version','Connected Clients','Connected Slaves','Used Memory', 'Total Connections', 'Total Commands Processed']">
-</table-data-plugin>
-
+</object-table-plugin>
