it was a foolish endeavor. displaying memcached data results as is.

--- a/templates/modules/memcached.html
+++ b/templates/modules/memcached.html
@@ -1,5 +1,4 @@
-<table-data-plugin 
+<object-table-plugin 
     heading="Memcached" 
-    module-name="memcached"
-    table-headers="['Data']">
-</table-data-plugin>
+    module-name="memcached">
+</object-table-plugin>
