Consolidated table plugins. template is a bit messy.

--- a/templates/modules/internet-speed.html
+++ b/templates/modules/internet-speed.html
@@ -1,4 +1,5 @@
-<object-table-plugin 
+<table-data-plugin 
     heading="Internet Speed"
     module-name="internet_speed"
-</object-table-plugin>
+    object-table="true"
+</table-data-plugin>
