--- a/templates/modules/memcached.html
+++ b/templates/modules/memcached.html
@@ -1,4 +1,5 @@
-<object-table-plugin 
+<table-data-plugin 
     heading="Memcached" 
-    module-name="memcached">
-</object-table-plugin>
+    module-name="memcached"
+    object-table="true">
+</table-data-plugin>
