--- a/templates/modules/redis.html
+++ b/templates/modules/redis.html
@@ -1,4 +1,5 @@
-<object-table-plugin 
+<table-data-plugin 
     heading="Redis"
     module-name="redis_status"
-</object-table-plugin>
+    object-table="true"
+</table-data-plugin>
