--- a/templates/app/table-data-plugin.html
+++ b/templates/app/table-data-plugin.html
@@ -5,17 +5,31 @@
 
 	<loader ng-hide="tableRows"></loader>
 
-	<table ng-show="tableRows">
-		<thead>
-			<tr>
-				<th ng-repeat="header in tableHeaders track by $index">{{header}}</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr ng-repeat="row in tableRows track by $index ">
-				<td ng-repeat="item in row track by $index">{{item}}</td>
-			</tr>
-		</tbody>
-	</table>
+	<div ng-show="tableRows">
 
+		<table ng-if="!objectTable">
+			<thead>
+				<tr>
+					<th ng-repeat="header in tableHeaders track by $index">{{header}}</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr ng-repeat="row in tableRows track by $index ">
+					<td ng-repeat="item in row track by $index">{{item}}</td>
+				</tr>
+			</tbody>
+		</table>
+		
+		<table ng-if="objectTable">
+			<tbody>
+				<tr ng-repeat="(name, value) in tableRows track by $index">
+					<td>{{ name }}</td>
+					<td>{{ value }}</td>
+				</tr>
+			</tbody>
+		</table>
+		
+	</div>
+
+	<no-data ng-show="emptyResult"></no-data>
 </plugin>
