centered the loader

--- a/templates/app/ui-elements/loader.html
+++ b/templates/app/ui-elements/loader.html
@@ -102,6 +102,10 @@
     border-bottom-color: #ede670;
     border-right-color: #64c3f2;
   }
+  .loader{
+    float: none;
+    margin: 0 auto;
+  }
   .loader:before {
     -webkit-filter: blur(2px);
     filter: blur(2px);
