when table data is being refreshed, show loader.

--- a/templates/app/table-data-plugin.html
+++ b/templates/app/table-data-plugin.html
@@ -5,7 +5,7 @@
 
 	<loader ng-hide="tableRows"></loader>
 
-	<div ng-show="tableRows">
+	<div class="animate" ng-show="tableRows">
 
 		<table ng-if="!objectTable">
 			<thead>
