--- a/css/main.css
+++ b/css/main.css
@@ -206,6 +206,121 @@ refresh-btn button:hover {
 refresh-btn button:active {
     background-color: #0f9d58;
 }
+@-webkit-keyframes spin {
+    0% {
+      -ms-transform: rotate(0deg);
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    100% {
+      -ms-transform: rotate(-2160deg);
+      -webkit-transform: rotate(-2160deg);
+      transform: rotate(-2160deg);
+    }
+  }
+  @-ms-keyframes spin {
+    0% {
+      -ms-transform: rotate(0deg);
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    100% {
+      -ms-transform: rotate(-2160deg);
+      -webkit-transform: rotate(-2160deg);
+      transform: rotate(-2160deg);
+    }
+  }
+  @keyframes spin {
+    0% {
+      -ms-transform: rotate(0deg);
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    100% {
+      -ms-transform: rotate(-2160deg);
+      -webkit-transform: rotate(-2160deg);
+      transform: rotate(-2160deg);
+    }
+  }
+  @-webkit-keyframes normal-opacity {
+    0% {
+      opacity: 1;
+    }
+    45% {
+      opacity: 0;
+    }
+    55% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  @-ms-keyframes normal-opacity {
+    0% {
+      opacity: 1;
+    }
+    45% {
+      opacity: 0;
+    }
+    55% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  @keyframes normal-opacity {
+    0% {
+      opacity: 1;
+    }
+    45% {
+      opacity: 0;
+    }
+    55% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
+  .loader {
+    -webkit-animation: 1.25s spin cubic-bezier(0.46, -0.4, 0.2, 1.51) infinite both;
+    animation: 1.25s spin cubic-bezier(0.46, -0.4, 0.2, 1.51) infinite both;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    overflow: hidden;
+  }
+  .loader:before, .loader:after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    top: 0;
+    left: 0;
+    -moz-box-sizing: border-box;
+         box-sizing: border-box;
+    border: 20px solid black;
+    border-top-color: #fa4248;
+    border-left-color: #5ddbba;
+    border-bottom-color: #ede670;
+    border-right-color: #64c3f2;
+  }
+  .loader{
+    float: none;
+    margin: 0 auto;
+  }
+  .loader:before {
+    -webkit-filter: blur(2px);
+    filter: blur(2px);
+  }
+  .loader:after {
+    -webkit-animation: 1.25s normal-opacity cubic-bezier(0.46, -0.4, 0.2, 1.51) infinite both;
+    animation: 1.25s normal-opacity cubic-bezier(0.46, -0.4, 0.2, 1.51) infinite both;
+  }
 /**** Section ****/
 section {
     text-align: center;
