--- a/templates/app/table-data-plugin.html
+++ b/templates/app/table-data-plugin.html
@@ -2,19 +2,24 @@
 	heading="{{ heading }}"
 	last-updated="lastGet"
 	on-refresh="getData()">
-
+    
 	<loader ng-hide="tableRows"></loader>
 
 	<div class="animate" ng-show="tableRows">
-
+        
 		<table ng-if="!objectTable">
 			<thead>
+                <tr class="table-data-filter-container">
+                    <th colspan="{{ tableHeaders.length }}" class="table-data-filter-container">
+                        <input class="table-data-filter" ng-model="keyword" placeholder="Search">
+                    </th>
+                </tr>
 				<tr>
 					<th ng-repeat="header in tableHeaders track by $index">{{header}}</th>
 				</tr>
 			</thead>
 			<tbody>
-				<tr ng-repeat="row in tableRows track by $index ">
+				<tr ng-repeat="row in tableRows | filter:keyword">
 					<td ng-repeat="item in row track by $index">{{item}}</td>
 				</tr>
 			</tbody>
@@ -22,7 +27,7 @@
 		
 		<table ng-if="objectTable">
 			<tbody>
-				<tr ng-repeat="(name, value) in tableRows track by $index">
+				<tr ng-repeat="(name, value) in tableRows">
 					<td>{{ name }}</td>
 					<td>{{ value }}</td>
 				</tr>
