--- a/templates/app/table-data-plugin.html
+++ b/templates/app/table-data-plugin.html
@@ -7,7 +7,7 @@
 
 	<div class="animate" ng-show="tableRows">
 		
-		<table ng-if="!objectTable" class="table-data-plugin">
+		<table class="table-data-plugin">
 			<thead>
                 <tr class="table-data-filter-container" ng-show="tableRows.length">
                     <th colspan="{{ tableHeaders.length }}" class="filter-container">
@@ -24,15 +24,6 @@
 			<tbody>
 				<tr ng-repeat="row in tableRows | filter:keyword">
 					<td ng-repeat="item in row track by $index">{{item}}</td>
-				</tr>
-			</tbody>
-		</table>
-		
-		<table ng-if="objectTable">
-			<tbody>
-				<tr ng-repeat="(name, value) in tableRows">
-					<td>{{ name }}</td>
-					<td>{{ value }}</td>
 				</tr>
 			</tbody>
 		</table>
