ping speeds module updated

--- a/templates/sections/network.html
+++ b/templates/sections/network.html
@@ -1,7 +1,8 @@
 <ip-addresses></ip-addresses>
 <network-connections></network-connections>
-<!-- <arp-cache-table></arp-cache-table>
+<arp-cache-table></arp-cache-table>
 <ping-speeds></ping-speeds>
 <dhcp-leases></dhcp-leases>
-<bandwidth></bandwidth>
-<internet-speed></internet-speed> -->
+<!--<bandwidth></bandwidth>
+<internet-speed></internet-speed>
+-->
