updated bandwidth module

--- a/templates/sections/network.html
+++ b/templates/sections/network.html
@@ -3,6 +3,5 @@
 <arp-cache-table></arp-cache-table>
 <ping-speeds></ping-speeds>
 <dhcp-leases></dhcp-leases>
-<!--<bandwidth></bandwidth>
+<bandwidth></bandwidth>
 <internet-speed></internet-speed>
--->
