Added io-stats module.

--- a/templates/sections/basic-info.html
+++ b/templates/sections/basic-info.html
@@ -1,3 +1,4 @@
 <machine-info></machine-info>
-<meminfo></meminfo>
-<cpuinfo></cpuinfo>
+<memory-info></memory-info>
+<cpu-info></cpu-info>
+<io-stats></io-stats>
