--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 /***** Template ****/
 * {
-  font-family: Raleway, HelveticaNeue, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Merriweather', Arial, sans-serif;
   letter-spacing: .1rem;
 }
 html {
@@ -50,10 +50,6 @@ body {
 .hero {
   padding: 10px 0 20px 0;
   text-align: center;
-}
-.hero h2 {
-  font-weight: normal;
-  margin-bottom: 0;
 }
 .hero nav-bar {
   display: block;
@@ -119,15 +115,11 @@ body {
   margin-top: 0;
   border: 1px;
 }
-#plugins section {
-  clear: both;
-}
 
 /***** Plugin ****/
 .plugin {
   float: left;
   padding: 0;
-  margin: 10px;
   background-color: white;
   
   min-width: 40%;
@@ -138,11 +130,18 @@ body {
   border-radius: 2px;
   box-shadow: 0 5px 10px rgba(0,0,0,.53),0 3px 10px rgba(0,0,0,.16);
 
-  margin-top: 50px;
+  margin-top: 10px;
+
+  margin: 0 auto;
+  margin-left: 50px;
+  margin-bottom: 50px;
 }
 @media (max-width: 768px) { 
   .plugin {
-    max-width: 90%;
+    max-width: 50%;
+    float: none;
+    margin: 0 auto;
+    margin-bottom: 10px;
   }
   .plugin-body {
     max-height: 400px;
@@ -152,7 +151,6 @@ body {
   height: 25px;
   max-width: 100%;
   padding: 20px;
-
   letter-spacing: .1rem;
   line-height: 1.3rem;
   font-size: 11px;
@@ -176,11 +174,7 @@ body {
   font-size: 11px;
   float: left;
 }
-.plugin h3{
-  padding-top: 10px;
-  clear: both;
-  font-weight: normal;
-}
+
 no-data {
   font-style: italic;
 }
@@ -324,16 +318,6 @@ refresh-btn button:active {
 .loader:after {
   -webkit-animation: 1.25s normal-opacity cubic-bezier(0.46, -0.4, 0.2, 1.51) infinite both;
   animation: 1.25s normal-opacity cubic-bezier(0.46, -0.4, 0.2, 1.51) infinite both;
-}
-/**** Section ****/
-section {
-  text-align: center;
-  display: block;
-}
-section h2 {
-  font-weight: normal;
-  color: #333;
-  text-decoration: underline;
 }
 /**** General Elements ****/
 table
