added summer theme

--- a/css/themes.css
+++ b/css/themes.css
@@ -22,3 +22,24 @@ html.winter .plugin refresh-btn button {
 table th {
   color: #012e40;
 }
+
+/**************************************
+  Theme: Summer
+**************************************/
+
+html.summer {
+  clear: both;
+  background-color: #FBE9E7;
+}
+html.summer .hero nav-bar ul li.active a,
+html.summer .hero nav-bar ul li a:hover {
+  color: #D84315;
+}
+html.summer .plugin {
+}
+html.summer .plugin .top-bar {
+  color: #BF360C;
+}
+html.summer .plugin refresh-btn button {
+  background-color: #BF360C;
+}
