--- a/templates/app/theme-switcher.html
+++ b/templates/app/theme-switcher.html
@@ -1,6 +1,6 @@
 <div id="theme-switcher" class="{{ (themeSwitcherOpen) ? 'open': '' }}">
 
-	<span class="settings-icon" ng-click="toggleThemeSwitcher()">&#x2699;</span>
+	<div class="settings-icon" ng-click="toggleThemeSwitcher()">&#x2699;</div>
 
 	<div 
 		class="option {{ (theme.selected) ? 'selected': '' }}" 
