--- a/css/main.css
+++ b/css/main.css
@@ -100,6 +100,9 @@ body {
 }
 #theme-switcher .settings-icon{
   font-size: 25px;
+  height: 100%;
+  float: left;
+  display: inline-block;
 }
 #theme-switcher.open {
   right: 0;
