updated static-data-plugin for scrutinizer warnings.

--- a/templates/app/static-data-plugin.html
+++ b/templates/app/static-data-plugin.html
@@ -4,11 +4,10 @@
 	on-refresh="getData()">
 
 	<table>
-		<thead></thead>
 		<tbody ng-repeat="staticItem in staticData">
-			<tr>
-				<td>{{staticItem.name}}</td>
-				<td>{{staticItem.data}}</td>
+			<tr ng-repeat="(key, val) in staticItem.info">
+				<td>{{ key }}</td>
+				<td>{{ val }}</td>
 			</tr>
 		</tbody>
 	</table>
